crates/ink/tests/ui/trait_def/fail/message_selector_invalid_2.stderr
error: encountered #[ink(selector)] that is missing its u32 parameter. Did you mean #[ink(selector = value: u32)] ?
 --> tests/ui/trait_def/fail/message_selector_invalid_2.rs:3:20
  |
3 |     #[ink(message, selector)]
  |                    ^^^^^^^^
